unpackaged/main/default/objects/Case/fields/ACG_Manager_Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>ACG_Manager_Incident_Description__c</fullName>
    <defaultValue>&#39;Please use the manager incident report form.&#39;</defaultValue>
    <inlineHelpText>To create a manager incident report, use the Manger Incident Report Form. Use the &quot;&quot;Post&quot;&quot; button on the right to provide any updates.</inlineHelpText>
    <label>Manager Incident Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>