unpackaged/main/default/objects/Case/fields/ACG_Manager_Report_Filled_Out__c.field-meta.xml
<CustomField>
    <fullName>ACG_Manager_Report_Filled_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to keep ownership of the Case and bypass assignment rules.</description>
    <label>Manager Report Filled Out</label>
    <type>Checkbox</type>
</CustomField>