unpackaged/main/default/objects/Case/fields/ACG_Member_Location_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Location_Comments__c</fullName>
    <label>Member Location Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>