unpackaged/main/default/objects/Case/fields/ACG_Member_Prefers_Tow__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Prefers_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Prefers Tow</label>
    <type>Checkbox</type>
</CustomField>