unpackaged/main/default/objects/Case/fields/ACG_Member_present_at_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_present_at_Vehicle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Member Present at Vehicle</label>
    <type>Checkbox</type>
</CustomField>