unpackaged/main/default/objects/Case/fields/ACG_Member_Service_Level_Frm_Acct__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Service_Level_Frm_Acct__c</fullName>
    <description>Formula field to pull the member&#39;s service level from their Account record</description>
    <formula>IF(!ISBLANK(TEXT(Account.AAA_Membership_Level__c)), TEXT( Account.AAA_Membership_Level__c ),TEXT( Case_Membership_Level__c ))</formula>
    <label>Membership Level</label>
    <type>Text</type>
</CustomField>