unpackaged/main/default/objects/Case/fields/ACG_Member_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Vehicle</label>
    <referenceTo>ACG_Master_Vehicle__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>