unpackaged/main/default/objects/Case/fields/ACG_Membership_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Cancellation_Reason__c</fullName>
    <label>Membership Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuser Downgrade</fullName>
            </value>
            <value>
                <fullName>Automatic Billing Issue</fullName>
            </value>
            <value>
                <fullName>Bad Check</fullName>
            </value>
            <value>
                <fullName>Bought New Car</fullName>
            </value>
            <value>
                <fullName>Can&#39;t Afford</fullName>
            </value>
            <value>
                <fullName>Cancel per CC Co.</fullName>
            </value>
            <value>
                <fullName>Cancel per Management</fullName>
            </value>
            <value>
                <fullName>Cancel per National</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Disagree with Policy</fullName>
            </value>
            <value>
                <fullName>Divorced/Separated Per Primary</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Use/Don&#39;t Need</fullName>
            </value>
            <value>
                <fullName>Donor Request</fullName>
            </value>
            <value>
                <fullName>Dues Increase</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Email Request - No Reason Given</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>ERS 00T Cancel</fullName>
            </value>
            <value>
                <fullName>ERS Service Problem</fullName>
            </value>
            <value>
                <fullName>Fleet Request</fullName>
            </value>
            <value>
                <fullName>Full Year Money Back Guarantee</fullName>
            </value>
            <value>
                <fullName>Issue Management Request - No Reason Given</fullName>
            </value>
            <value>
                <fullName>Joined Non-AAA Club</fullName>
            </value>
            <value>
                <fullName>Marketing Verbiage</fullName>
            </value>
            <value>
                <fullName>Moved Out of Territory</fullName>
            </value>
            <value>
                <fullName>MRL Request</fullName>
            </value>
            <value>
                <fullName>No Longer Driving</fullName>
            </value>
            <value>
                <fullName>Non-Renewable Product</fullName>
            </value>
            <value>
                <fullName>Not Reinstated</fullName>
            </value>
            <value>
                <fullName>Not Worth the Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>