unpackaged/main/default/objects/Case/fields/ACG_Membership_Info__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Info__c</fullName>
    <formula>IF(   NOT(     ISBLANK(Contact.Membership_Type__c)   ),Contact.Membership_Type__c &amp; &quot; - &quot;,&quot;&quot;) &amp; IF(  NOT(    ISBLANK(Contact.Member_Card_Num__c)  ),Contact.Member_Card_Num__c &amp; &quot; - &quot;,&quot;&quot;) &amp; IF(  NOT(    ISBLANK(TEXT(Contact.Membership_Level__c))),TEXT(Contact.Membership_Level__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Info</label>
    <type>Text</type>
</CustomField>