unpackaged/main/default/objects/Case/fields/ACG_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Status__c</fullName>
    <formula>TEXT(Account.ACG_Membership_Status__c)</formula>
    <label>Membership Status</label>
    <type>Text</type>
</CustomField>