unpackaged/main/default/objects/Case/fields/ACG_Model__c.field-meta.xml
<CustomField>
    <fullName>ACG_Model__c</fullName>
    <label>Vehicle Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>