unpackaged/main/default/objects/Case/fields/ACG_Notify_Provider__c.field-meta.xml
<CustomField>
    <fullName>ACG_Notify_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Provider</label>
    <type>Checkbox</type>
</CustomField>