unpackaged/main/default/objects/Case/fields/ACG_Over_Entitlement_Fee__c.field-meta.xml
<CustomField>
    <fullName>ACG_Over_Entitlement_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Entitlement Fee</label>
    <type>Checkbox</type>
</CustomField>