unpackaged/main/default/objects/Case/fields/ACG_Payer_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>ACG_Payer_of_Resolution__c</fullName>
    <inlineHelpText>The organization that paid for the resolution</inlineHelpText>
    <label>Payer of Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>50/50 Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>