unpackaged/main/default/objects/Case/fields/ACG_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Phone_Type__c</fullName>
    <description>To capture contact phone type in FSL Work Order Intake</description>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>