unpackaged/main/default/objects/Case/fields/ACG_Pick_up_Point_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Pick_up_Point_Comments__c</fullName>
    <label>Pick-up Point Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>