unpackaged/main/default/objects/Case/fields/ACG_Plate__c.field-meta.xml
<CustomField>
    <fullName>ACG_Plate__c</fullName>
    <label>Vehicle Plate</label>
    <length>8</length>
    <type>Text</type>
</CustomField>