unpackaged/main/default/objects/Case/fields/ACG_Point_Value__c.field-meta.xml
<CustomField>
    <fullName>ACG_Point_Value__c</fullName>
    <description>$ Value of points used for agent error</description>
    <inlineHelpText>$ Value of points used for agent error</inlineHelpText>
    <label>Point $ Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>