unpackaged/main/default/objects/Case/fields/ACG_Policy__c.field-meta.xml
<CustomField>
    <fullName>ACG_Policy__c</fullName>
    <label>Policy #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>