unpackaged/main/default/objects/Case/fields/ACG_Priority_Code__c.field-meta.xml
<CustomField>
    <fullName>ACG_Priority_Code__c</fullName>
    <inlineHelpText>To capture Priority Code in FSL ERS Work Order Intake flow</inlineHelpText>
    <label>Priority Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1-Baby Locked in Car</fullName>
            </value>
            <value>
                <fullName>P2-Member Safety/Medical Concern</fullName>
            </value>
            <value>
                <fullName>P3-Other Priority</fullName>
            </value>
            <value>
                <fullName>P4-Public Agency/Police on Scene</fullName>
            </value>
            <value>
                <fullName>P5-Blocking Traffic</fullName>
            </value>
            <value>
                <fullName>P6-Accident</fullName>
            </value>
            <value>
                <fullName>P7-Freeway/Highway Call</fullName>
            </value>
            <value>
                <fullName>P8-Lockout, Car Running</fullName>
            </value>
            <value>
                <fullName>R1-Pet Locked in Car</fullName>
            </value>
            <value>
                <fullName>R2-AAA Error/Re-Dispatched Call</fullName>
            </value>
            <value>
                <fullName>RP-RAP Call</fullName>
            </value>
            <value>
                <fullName>RS-VIP Member</fullName>
            </value>
            <value>
                <fullName>NA-No Priority Code</fullName>
            </value>
            <value>
                <fullName>AP-Aged Call</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
            <value>
                <fullName>P1-Baby/ Animal Locked in Car</fullName>
                <isActive>false</isActive>
                <label>P1-Baby/ Animal Locked in Car</label>
            </value>
            <value>
                <fullName>P1-Person/ Animal/ Medication locked in veh</fullName>
                <isActive>false</isActive>
                <label>P1-Person/ Animal/ Medication locked in veh</label>
            </value>
            <value>
                <fullName>P2-Expressway/Interstate /Dangerous location</fullName>
                <isActive>false</isActive>
                <label>P2-Expressway/Interstate /Dangerous location</label>
            </value>
            <value>
                <fullName>P2-Member Safety/ Medical Concern</fullName>
                <isActive>false</isActive>
                <label>P2-Member Safety/ Medical Concern</label>
            </value>
            <value>
                <fullName>P3-Extreme Weather/ No Shelter</fullName>
                <isActive>false</isActive>
                <label>P3-Extreme Weather/ No Shelter</label>
            </value>
            <value>
                <fullName>P3-Police, Agency or Accident Call</fullName>
                <isActive>false</isActive>
                <label>P3-Police, Agency or Accident Call</label>
            </value>
            <value>
                <fullName>P4-Expressway/Interstate/Safely to the side</fullName>
                <isActive>false</isActive>
                <label>P4-Expressway/Interstate/Safely to the side</label>
            </value>
            <value>
                <fullName>P4-Public Agency/ Police on Scene</fullName>
                <isActive>false</isActive>
                <label>P4-Public Agency/ Police on Scene</label>
            </value>
            <value>
                <fullName>P6-Weather Emergency</fullName>
                <isActive>false</isActive>
                <label>P6-Weather Emergency</label>
            </value>
            <value>
                <fullName>P7-Freeway/ Highway Call</fullName>
                <isActive>false</isActive>
                <label>P7-Freeway/ Highway Call</label>
            </value>
            <value>
                <fullName>R1-AAA Employee/ VIP</fullName>
                <isActive>false</isActive>
                <label>R1-AAA Employee/ VIP</label>
            </value>
            <value>
                <fullName>R2-AAA Error/ Re-Disaptched Call</fullName>
                <isActive>false</isActive>
                <label>R2-AAA Error/ Re-Disaptched Call</label>
            </value>
            <value>
                <fullName>RS-Response Call</fullName>
                <isActive>false</isActive>
                <label>RS-Response Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>