unpackaged/main/default/objects/Case/fields/ACG_Provider_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Provider_Comments__c</fullName>
    <label>Provider Comments</label>
    <type>TextArea</type>
</CustomField>