unpackaged/main/default/objects/Case/fields/ACG_Recommend_an_Article__c.field-meta.xml
<CustomField>
    <fullName>ACG_Recommend_an_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to recommend that a Knowledge Article be created to help solve Cases like this.</inlineHelpText>
    <label>Recommend an Article</label>
    <type>Checkbox</type>
</CustomField>