unpackaged/main/default/objects/Case/fields/ACG_Repair_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Repair_Date__c</fullName>
    <description>Date repairs were completed</description>
    <inlineHelpText>Date repairs were completed</inlineHelpText>
    <label>Repair Date</label>
    <type>Date</type>
</CustomField>