unpackaged/main/default/objects/Case/fields/ACG_Request_Severity__c.field-meta.xml
<CustomField>
    <fullName>ACG_Request_Severity__c</fullName>
    <inlineHelpText>Please indicate the severity of the impact of this request.</inlineHelpText>
    <label>Request Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Emergency/Safety</fullName>
            </value>
            <value>
                <fullName>2 - Urgent/Production</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
            <value>
                <fullName>5 - Scheduled/PM</fullName>
            </value>
            <value>
                <fullName>1 - Wash Down</fullName>
            </value>
            <value>
                <fullName>2 - Wash Quality Degraded</fullName>
            </value>
            <value>
                <fullName>3 - Minor Repair</fullName>
            </value>
            <value>
                <fullName>4 - Preventive Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>