unpackaged/main/default/objects/Case/fields/ACG_Requested_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Requested_Appointment_Date__c</fullName>
    <description>Requested Appointment Date populated via Car Care Appointment Page</description>
    <label>Requested Appointment Date</label>
    <type>Date</type>
</CustomField>