unpackaged/main/default/objects/Case/fields/ACG_Requested_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>ACG_Requested_Appointment_Time__c</fullName>
    <description>Car Care Appointment Requested Time . Populated via Car Care Appointments community public page</description>
    <label>Requested Appointment Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>07:30 AM</fullName>
            </value>
            <value>
                <fullName>08:00 AM</fullName>
            </value>
            <value>
                <fullName>08:30 AM</fullName>
            </value>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>09:30 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:30 AM</fullName>
            </value>
            <value>
                <fullName>8:00 AM</fullName>
            </value>
            <value>
                <fullName>8:30 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>01:00 PM</fullName>
            </value>
            <value>
                <fullName>01:30 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM</fullName>
            </value>
            <value>
                <fullName>02:30 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM</fullName>
            </value>
            <value>
                <fullName>03:30 PM</fullName>
            </value>
            <value>
                <fullName>04:00 PM</fullName>
            </value>
            <value>
                <fullName>04:30 PM</fullName>
            </value>
            <value>
                <fullName>05:00 PM</fullName>
            </value>
            <value>
                <fullName>05:30 PM</fullName>
            </value>
            <value>
                <fullName>06:00 PM</fullName>
            </value>
            <value>
                <fullName>06:30 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>