unpackaged/main/default/objects/Case/fields/ACG_Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Resolution_Comments__c</fullName>
    <inlineHelpText>Required if Resolution Type is &#39;Other&#39;.</inlineHelpText>
    <label>Resolution Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>