unpackaged/main/default/objects/Case/fields/ACG_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apology Letter</fullName>
            </value>
            <value>
                <fullName>Coupon Book</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>DRC Voucher</fullName>
            </value>
            <value>
                <fullName>Entered into AICWEB</fullName>
            </value>
            <value>
                <fullName>Entitlement Rollback</fullName>
            </value>
            <value>
                <fullName>Referred to Vendor/Service Provider</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Responded to Member</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
            <value>
                <fullName>Left a message</fullName>
            </value>
            <value>
                <fullName>Followup required</fullName>
            </value>
            <value>
                <fullName>Followup resolved</fullName>
            </value>
            <value>
                <fullName>Contacted member</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>