unpackaged/main/default/objects/Case/fields/ACG_RO_Reopened__c.field-meta.xml
<CustomField>
    <fullName>ACG_RO_Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the RO reopened to solve this problem?</inlineHelpText>
    <label>RO Reopened</label>
    <type>Checkbox</type>
</CustomField>