unpackaged/main/default/objects/Case/fields/ACG_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>ACG_Root_Cause__c</fullName>
    <description>Denotes the root cause of this issue.</description>
    <inlineHelpText>In your opinion, what was the root cause for this Case?</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code-Related Issue</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>How-To/Instruction Request</fullName>
            </value>
            <value>
                <fullName>Process Automation Issue</fullName>
            </value>
            <value>
                <fullName>Profiles &amp; Permissions Issue</fullName>
            </value>
            <value>
                <fullName>Roles &amp; Sharing Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>