unpackaged/main/default/objects/Case/fields/ACG_RPM_Margin__c.field-meta.xml
<CustomField>
    <fullName>ACG_RPM_Margin__c</fullName>
    <description>RPM Margin for EEMU cases</description>
    <label>RPM Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>