unpackaged/main/default/objects/Case/fields/ACG_Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>ACG_Salesforce_Product__c</fullName>
    <description>Denotes area of impact for reporting and planning.</description>
    <inlineHelpText>Which Salesforce product is impacted?</inlineHelpText>
    <label>Salesforce Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Community Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Field Service Lightning</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>