unpackaged/main/default/objects/Case/fields/ACG_Send_ERS_Provider_Update__c.field-meta.xml
<CustomField>
    <fullName>ACG_Send_ERS_Provider_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check that triggers email to provider with case updates.</description>
    <inlineHelpText>Check to resend a case update to the provider after record is saved.</inlineHelpText>
    <label>Send ERS Provider Update</label>
    <type>Checkbox</type>
</CustomField>