unpackaged/main/default/objects/Case/fields/ACG_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>ACG_Sentiment__c</fullName>
    <inlineHelpText>What was the member&#39;s/customer&#39;s reaction to this engagement?</inlineHelpText>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>