unpackaged/main/default/objects/Case/fields/ACG_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ACG_Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>