unpackaged/main/default/objects/Case/fields/ACG_Service_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Comments__c</fullName>
    <label>Service Comments</label>
    <length>20</length>
    <type>Text</type>
</CustomField>