unpackaged/main/default/objects/Case/fields/ACG_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Description__c</fullName>
    <description>Appointment service description populated via Car Care Appointment Page</description>
    <label>Service Description</label>
    <type>TextArea</type>
</CustomField>