unpackaged/main/default/objects/Case/fields/ACG_Service_Required__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Required__c</fullName>
    <label>Service Required</label>
    <length>30</length>
    <type>Text</type>
</CustomField>