unpackaged/main/default/objects/Case/fields/ACG_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Flat Tire</fullName>
            </value>
            <value>
                <fullName>Vehicle Lockout</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Extrication</fullName>
            </value>
            <value>
                <fullName>Home Lockout</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Extrication Tow Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>