unpackaged/main/default/objects/Case/fields/ACG_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>ACG_SMS_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>