unpackaged/main/default/objects/Case/fields/ACG_Social_Hub_Case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Social_Hub_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies cases created by Social Hub to trigger processes specific to Social cases.</description>
    <label>Social Hub Case</label>
    <type>Checkbox</type>
</CustomField>