unpackaged/main/default/objects/Case/fields/ACG_Sub_Cat_Other_Desc__c.field-meta.xml
<CustomField>
    <fullName>ACG_Sub_Cat_Other_Desc__c</fullName>
    <description>If sub-category selected = &#39;Other&#39; this field must be completed</description>
    <inlineHelpText>If sub-category selected = &#39;Other&#39; this field must be completed</inlineHelpText>
    <label>Sub-Cat Other Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>